fix: add spacing for fordeling annet section

--- a/src/app/fordeling/fordeling.css
+++ b/src/app/fordeling/fordeling.css
@@ -58,6 +58,10 @@
     margin: 0 0 0 1.375rem;
 }
 
+.fordeling-page .fordeling-page__innholdForDokumenttypeAnnet {
+    margin-top: 1rem;
+}
+
 .journalikkestottetkopi-checkboks {
     display: flex;
     flex-direction: row;
